# SCR-1.0

./: .gitattributes  .gitignore  LICENSE  README.md  admin.py  admin_setup.py  app.py  auth.py  create_admin.py  models.py  mysql_setup.py  pyproject.toml  reconnaissance.py  report.py  requirements-note.txt  scan.py  superadmin_setup.py  utils.py  vulnerability_scanner.py
instance/: scr-1.db  scr.db
static/css/: animations.css  style.css
static/js/: animation.js  charts.js  main.js  scan.js
templates/: admin_dashboard.html  base.html  dashboard.html  history.html  index.html  login.html  profile.html  register.html  report.html  scan.html
templates/admin/: domains.html  scans.html  users.html  view_scan.html
